--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -221,19 +221,18 @@ section {
   width: 300px;
   max-height: 300px;
   padding: 40px;
-  display: none;
-  opacity: 0;
+  /* display: none; */
 
   position: absolute;
   top: 70px;
 
   background: rgba(0, 0, 0, 0.4);
-
-  transition: opacity 1.3s;
+  transition: transform .3s;
+  transform: scaleY(0);
+  transform-origin: center top;
 }
 .scroll-active {
-  display: block;
-  opacity: 1;
+  transform: scaleY(1);
 }
 .scroll__list {
   display: flex;
@@ -750,10 +749,12 @@ section {
   padding-top: 98px;
   padding-bottom: 81px;
 }
+.events__swiper-container {
+  margin: 0 -25px;
+}
 .events__cards {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -25px;
   overflow: hidden;
   max-height: 752px;
   transition: max-height 3s;
