--- a/Курсовая/css/style.css
+++ b/Курсовая/css/style.css
@@ -22,7 +22,14 @@ html {
 body._lock {
   overflow: hidden;
 }
-*:focus {
+img {
+  pointer-events: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+:focus-visible {
   outline: 2px solid #7943A4;
   outline-offset: 3px;
 }
@@ -70,6 +77,7 @@ section {
 .swiper-pagination__events {
   display: none;
 }
+
 
 /* Header */
 .header__first_bg {
@@ -838,6 +846,9 @@ section {
   flex-direction: column;
   margin-bottom: 28px;
 }
+.checkbox__item {
+  position: relative;
+}
 .checkbox__title {
   margin-left: 1px;
   color: #fff;
@@ -847,7 +858,9 @@ section {
   cursor: auto;
 }
 .checkbox__input {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  top: 9px;
 }
 .checkbox__label {
   position: relative;
@@ -856,6 +869,10 @@ section {
   color: #fff;
 
   transition: color .15s;
+}
+.checkbox__input:focus + .checkbox__label::before {
+  outline: 2px solid #7943A4;
+  outline-offset: 3px;
 }
 .checkbox__label::before {
   content: '';
@@ -931,7 +948,7 @@ section {
 }
 
 /* Price */
-.price_title {
+.price__title {
   color: #fff;
   margin-bottom: 8px;
 }
@@ -1091,7 +1108,7 @@ section {
 }
 .connect {
   height: 702px;
-  padding: 124px 3% 124px 8%;
+  padding: 124px 3% 124px calc(50% - 800px);
   border: 1px solid #CACACA;
   flex: 0 0 35.4%;
 }
@@ -1152,6 +1169,9 @@ section {
 }
 .footer__link:not(:last-child) {
   margin-right: 13px;
+}
+.swiper-button-disabled {
+  pointer-events: none;
 }
 
 
